// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetCategory Get specified article and articleCategories with DELETED status 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleCategories": Array [
        Object {
          "category": Object {
            "description": "詐騙貼圖、假行銷手法。",
            "id": "c2",
            "title": "免費訊息詐騙",
          },
          "categoryId": "c2",
        },
      ],
      "text": "愛滋病毒比保險套的孔隙更小，保險套無法達到保護的效果",
    },
  },
}
`;

exports[`GetCategory Get specified article and articleCategories with NORMAL status 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleCategories": Array [
        Object {
          "category": Object {
            "description": "對同性婚姻的恐懼、愛滋病的誤解與的防疫相關釋疑。",
            "id": "c1",
            "title": "性少數與愛滋病",
          },
          "categoryId": "c1",
        },
      ],
      "text": "愛滋病毒比保險套的孔隙更小，保險套無法達到保護的效果",
    },
  },
}
`;
